# MyLib

./: CMakeLists.txt  Mylib.cpp  main.cpp
